# flask-basic-api

./: .env.example  MANIFEST.in  README.md  microblog.py  setup.cfg  setup.py  tox.ini
api/: app.py
src/flaskbasicapi/: __init__.py  config.py
src/flaskbasicapi/api/: __init__.py  app.py  decorators.py  schemas.py
