[metadata]
name = flaskbasicapi
version = 1.0.0
description = Meta-framework for building Flask-based RESTful APIs
author = Pedro Binotto, Miguel Grinberg
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    flaskbasicapi
install_requires =
    alchemical>=0.5
    alembic>=1.7
    apifairy>=0.9
    apispec>=5.1
    blinker>=1
    click>=8.1
    faker>=13.3
    flask>=2.1
    flask-cors>=3.0
    flask-httpauth>=4.5
    flask-mail>=0.9
    flask-marshmallow>=0.14
    flask-migrate>=3.1
    flask-sqlalchemy>=2.5
    greenlet>=1.1
    gunicorn>=20.1
    itsdangerous>=2.1
    jinja2>=3.1
    mako>=1.2
    markupsafe>=2.1
    marshmallow>=3.15
    marshmallow-sqlalchemy>=0.28
    packaging>=21
    pyjwt>=2.3
    pyparsing>=3.0
    python-dateutil>=2.8
    python-dotenv>=0.20
    six>=1.16
    sqlalchemy>=1.4
    webargs>=8.1.0
    werkzeug>=2.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    mypy>=0.910
    flake8>=3.9

[options.package_data]
flaskbasicapi = py.typed

[flake8]
max-line-length = 160
